--- a/Maintenance dashboard.Client/MaintenanceDashboard.Client.csproj
+++ b/Maintenance dashboard.Client/MaintenanceDashboard.Client.csproj
@@ -114,6 +114,9 @@
     <Compile Include="Views\HomeControl.xaml.cs">
       <DependentUpon>HomeControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\TakePaddleControl.xaml.cs">
+      <DependentUpon>TakePaddleControl.xaml</DependentUpon>
+    </Compile>
     <Page Include="Views\AddEmployeeControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -159,6 +162,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Views\HomeControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\TakePaddleControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
