--- a/MaintenanceDashbord.Client.Tests/MaintenanceDashbord.Client.Tests.csproj
+++ b/MaintenanceDashbord.Client.Tests/MaintenanceDashbord.Client.Tests.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnitTests\EmployeeViewModelTests.cs" />
     <Compile Include="UnitTests\RegisterToolViewModelTests.cs" />
   </ItemGroup>
   <ItemGroup>
