--- a/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
+++ b/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
@@ -64,6 +64,10 @@
     <Compile Include="Migrations\202006090922507_ChangedUidPropertyToEmployeeTable.designer.cs">
       <DependentUpon>202006090922507_ChangedUidPropertyToEmployeeTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202006241150423_UpdatedPaddleTable.cs" />
+    <Compile Include="Migrations\202006241150423_UpdatedPaddleTable.designer.cs">
+      <DependentUpon>202006241150423_UpdatedPaddleTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -77,6 +81,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202006090922507_ChangedUidPropertyToEmployeeTable.resx">
       <DependentUpon>202006090922507_ChangedUidPropertyToEmployeeTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202006241150423_UpdatedPaddleTable.resx">
+      <DependentUpon>202006241150423_UpdatedPaddleTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
