--- a/Maintenance dashboard.Client/packages.config
+++ b/Maintenance dashboard.Client/packages.config
@@ -3,4 +3,6 @@
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
   <package id="MaterialDesignColors" version="1.2.2" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="3.0.1" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="Unity" version="5.11.7" targetFramework="net472" />
 </packages>
