Initialization of view models in the palette manager

--- a/Maintenance dashboard.Client/MaintenanceDashboard.Client.csproj
+++ b/Maintenance dashboard.Client/MaintenanceDashboard.Client.csproj
@@ -89,6 +89,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModels\ManagerPaddleViewModel.cs" />
     <Compile Include="ViewModels\EmployeeViewModel.cs" />
     <Compile Include="ViewModels\RegisterToolViewModel.cs" />
     <Compile Include="ViewModels\PaddleViewModel.cs" />
