--- a/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
+++ b/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
@@ -55,6 +55,7 @@
     <Compile Include="API\IEmployeeContext.cs" />
     <Compile Include="API\IPaddleContext.cs" />
     <Compile Include="API\IRegisterToolContext.cs" />
+    <Compile Include="API\ReceivedPaddleContext.cs" />
     <Compile Include="Domain\Employee.cs" />
     <Compile Include="API\EmployeeContext.cs" />
     <Compile Include="Domain\ReceivedPaddle.cs" />
