Tests__ DataContex for AcceptancePaddleControl

--- a/Maintenance dashboard.Client/MaintenanceDashboard.Client.csproj
+++ b/Maintenance dashboard.Client/MaintenanceDashboard.Client.csproj
@@ -108,8 +108,8 @@
     <Compile Include="Views\EditEmployeeControl.xaml.cs">
       <DependentUpon>EditEmployeeControl.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\GetPaddleControl.xaml.cs">
-      <DependentUpon>GetPaddleControl.xaml</DependentUpon>
+    <Compile Include="Views\AcceptancePaddleControl.xaml.cs">
+      <DependentUpon>AcceptancePaddleControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\ManagerEmployeeControl.xaml.cs">
       <DependentUpon>ManagerEmployeeControl.xaml</DependentUpon>
@@ -146,7 +146,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="Views\GetPaddleControl.xaml">
+    <Page Include="Views\AcceptancePaddleControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
