--- a/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
+++ b/MaintenanceDashboard.Data/MaintenanceDashboard.Data.csproj
@@ -89,6 +89,10 @@
     <Compile Include="Migrations\202007081250525_ReceivedPaddleTablePropertyNamesChanged.designer.cs">
       <DependentUpon>202007081250525_ReceivedPaddleTablePropertyNamesChanged.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202007100916302_ChangeDataTimePropertyToString.cs" />
+    <Compile Include="Migrations\202007100916302_ChangeDataTimePropertyToString.designer.cs">
+      <DependentUpon>202007100916302_ChangeDataTimePropertyToString.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -114,6 +118,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202007081250525_ReceivedPaddleTablePropertyNamesChanged.resx">
       <DependentUpon>202007081250525_ReceivedPaddleTablePropertyNamesChanged.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202007100916302_ChangeDataTimePropertyToString.resx">
+      <DependentUpon>202007100916302_ChangeDataTimePropertyToString.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
